--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@
 
 # Licensed under the Apache 2.0 license:
 # http://www.opensource.org/licenses/Apache 2.0-license
-# Copyright (c) 2018, Mikhail Bautin <mbautin@users.noreply.github.com>
+#  Copyright (c) YugaByte, Inc.
 
 language: python
 
