Added real tests and external program invocation tools

--- a/tox.ini
+++ b/tox.ini
@@ -6,9 +6,11 @@
 #  Copyright (c) YugaByte, Inc.
 
 [tox]
-envlist = py27, py34, pypy
+envlist = py27, py34, py36
 
 [testenv]
+deps = nose
+whitelist_externals = make
 commands =
     make setup
     make test
