--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ jobs:
       - image: circleci/buildpack-deps:18.04
     steps:
       - checkout
-      - run: sudo apt-get install -y python-pip
+      - run: sudo apt-get install -y python-pip python-tox
       - run: make tox
 workflows:
   version: 2
